<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navPrograms"
            android:icon="@drawable/ic_programs_black_24dp"
            android:title="@string/title_activity_programs"
            android:visible="false" />
        <item
            android:id="@+id/navTrackedEntities"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/title_activity_tracked_entity_instances"
            android:visible="false" />
        <item
            android:id="@+id/navTrackedEntitiesSearch"
            android:icon="@drawable/ic_search"
            android:title="@string/title_activity_tracked_entity_search"
            android:visible="false" />
        <item
            android:id="@+id/navDataSets"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/title_activity_data_sets"
            android:visible="false" />
        <item
            android:id="@+id/navDataSetInstances"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/title_activity_data_set_instances"
            android:visible="false" />
        <item
            android:id="@+id/navD2Errors"
            android:icon="@drawable/ic_error_outline_black_24dp"
            android:title="@string/title_activity_d2_errors"
            android:visible="false" />
        <item
            android:id="@+id/navFKViolations"
            android:icon="@drawable/ic_foreign_key_black_24dp"
            android:title="@string/title_activity_fk_violations"
            android:visible="false" />
        <item
            android:id="@+id/navCodeExecutor"
            android:icon="@drawable/ic_execute_code_black_24dp"
            android:title="@string/code_executor"
            android:visible="false" />
        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/dashboard"
            android:visible="true" />
        <item
            android:id="@+id/menu_tool"
            android:title="@string/cancer_notification_tool"
            android:visible="true" />
        <item
            android:id="@+id/menu_setting"
            android:title="@string/settings"
            android:visible="true" />
        <item
            android:id="@+id/menu_about"
            android:title="@string/about"
            android:visible="true" />
        <item
            android:id="@+id/menu_help"
            android:title="@string/help_desk"
            android:visible="true" />
    </group>

    <item android:title="@string/data_management">
        <menu>
            <item
                android:id="@+id/navWipeData"
                android:icon="@drawable/ic_delete_forever_black_24dp"
                android:title="@string/wipe_data"
                android:visible="false" />
        </menu>
    </item>

    <item android:title="@string/session">
        <menu>
            <item
                android:id="@+id/navExit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
