<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/materialCardView"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5dp"
    android:elevation="@dimen/_15dp"
    app:cardCornerRadius="@dimen/_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_70"
                android:textAlignment="textStart"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_notifications_made_by_facility"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:orientation="vertical"
            android:padding="@dimen/_15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_notifications"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>