<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/programs"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/programsDownloadedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/data_sets"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dataSetsDownloadedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/tracked_entity_instances"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trackedEntityInstancesDownloadedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/events_without_registration"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/singleEventsDownloadedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/data_values"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dataValuesDownloadedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <TextView
            android:id="@+id/notificator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:text="@string/lorem_ipsum"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting" />

        <ProgressBar
            android:id="@+id/syncProgressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="12dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/notificator"
            app:layout_constraintTop_toBottomOf="@+id/greeting" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:context=".ui.main.MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start">

                <TextView
                    android:id="@+id/syncMetadataText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/sync_metadata"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/syncDataText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/sync_data"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/uploadDataText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/upload_data"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/syncMetadataButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin_with_text"
                android:contentDescription="@string/some_data"
                android:tint="@color/colorWhite"
                app:srcCompat="@drawable/ic_assignment_black_24dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/syncDataButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/fab_margin_with_text"
                android:contentDescription="@string/some_data"
                android:tint="@color/colorWhite"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/uploadDataButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin_with_text"
                android:contentDescription="@string/some_data"
                android:tint="@color/colorWhite"
                app:srcCompat="@drawable/ic_cloud_upload_black_24dp" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_100_dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_dashboard" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>