<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.custom.OrganizationActivity"
    tools:showIn="@layout/activity_organization">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/_15dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancer_notification" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/organizationLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            app:boxBackgroundMode="outline"
            app:endIconDrawable="@android:drawable/ic_menu_search"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/organizationEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/programsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            tools:listitem="@layout/list_organization" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_proceed"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_15dp"
        android:gravity="center"
        android:text="@string/next_button" />
</RelativeLayout>